--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debowerify": "^1.2.0",
     "exorcist": "^0.1.6",
     "gulp": "^3.8.10",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-flatten": "0.0.4",
     "gulp-istanbul": "^0.5.0",
@@ -35,4 +36,5 @@
     "vinyl-source-stream": "^1.0.0",
     "vinyl-transform": "^1.0.0"
   }
+  
 }
