--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-flatten": "0.0.4",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-istanbul": "^0.5.0",
     "gulp-jade": "^0.10.0",
     "gulp-jshint": "^1.9.0",
@@ -36,5 +37,4 @@
     "vinyl-source-stream": "^1.0.0",
     "vinyl-transform": "^1.0.0"
   }
-  
 }
