--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debowerify": "^1.2.0",
     "exorcist": "^0.1.6",
     "gulp": "^3.8.10",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-flatten": "0.0.4",
